--- a/juci/Makefile
+++ b/juci/Makefile
@@ -91,7 +91,7 @@ $(eval $(call RegisterAddon,Plugins,juci-event, JUCI Event Subsystem ))
 $(eval $(call RegisterAddon,Plugins,juci-firewall-fw3, FW3 Firewall Configuration /etc/config/firewall ))
 $(eval $(call RegisterAddon,Plugins,juci-igmpinfo, IGMP Snooping Info through kernel snooping tables ))
 $(eval $(call RegisterAddon,Plugins,juci-jquery-console, Quake Style Dropdown Console for JUCI in browser))
-$(eval $(call RegisterAddon,Plugins,juci-realtime-graphs,Realtime Graphs based on juci-bwc,+luci-bwc))
+$(eval $(call RegisterAddon,Plugins,juci-realtime-graphs,Realtime Graphs based on juci-bwc,+juci-bwc))
 $(eval $(call RegisterAddon,Plugins,juci-macdb, MAC Address to Manufacturer Name resolution for juci))
 $(eval $(call RegisterAddon,Plugins,juci-minidlna, MiniDLNA Configuration))
 $(eval $(call RegisterAddon,Plugins,juci-mod-status, Deprecated JUCI Status Reporting Module))
